@@ -1,18 +1,57 @@
 plugins {
     kotlin("jvm") version "2.0.0"
+    application
 }
-
-group = "org.example"
-version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation(kotlin("test"))
+kotlin {
+    jvmToolchain(21)
 }
 
-tasks.test {
-    useJUnitPlatform()
+application {
+    mainClass = "MainKt"
 }
+
+dependencies {
+    implementation("com.formdev:flatlaf:3.6.2")
+    implementation("com.formdev:flatlaf-intellij-themes:3.6.2")
+}
+
+
+//------------------------------------------------------------------------
+// Packaging
+
+tasks.jar {
+    archiveVersion = ""
+    manifest {
+        attributes["Main-Class"] = "MainKt"
+        attributes["Add-Opens"] = "java.base/java.lang=ALL-UNNAMED"
+    }
+    from(configurations.runtimeClasspath.get().map {
+        if (it.isDirectory) it else zipTree(it)
+    })
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+tasks.register<Exec>("packageApp") {
+    group = "build"
+    description = "Package app as a self-contained executable"
+    dependsOn("jar")
+    doFirst {
+        delete("build/package")
+    }
+    commandLine(
+        "jpackage",
+        "--input", "build/libs",
+        "--main-jar", "${rootProject.name}.jar",
+        "--main-class", "MainKt",
+        "--type", "app-image",
+        "--name", rootProject.name,
+        "--dest", "build/package",
+        "--java-options", "--enable-native-access=ALL-UNNAMED",
+    )
+}
+
